# mtxgauge

./: .hgignore  CMakeLists.txt  README  TODO
inc/: gauge-private.h  gauge.h  xmlbase.h
src/: CMakeLists.txt
src/demos/: CMakeLists.txt  gauge-demo.c  xmlbase.c  xmlbase.h
src/lib/: CMakeLists.txt  gauge-private.c  gauge-xml.c  gauge.c
src/tests/: CMakeLists.txt
